deploy/kubernetes/application/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jstore
  labels:
    app.kubernetes.io/part-of: j-store
    jstore.observability/metrics-access: "true"
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
